--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ p{
     background-color: var(--button-background-color);
     border: 2px solid var(--button-text-color);
     color: var(--button-text-color);
-    font-family: "HeadlandOne";
+    font-family: "Inter";
     font-size: 20px;
     font-weight: 400;
     line-height: 25.05px;
@@ -194,7 +194,7 @@ p{
     width: 260px;
     height: 80px;
     border-radius: 45px 0px 45px 0px;
-    font-family: "HeadlandOne";
+    font-family: "Inter";
     font-size: 24px;
     font-weight: 400;
     line-height: 30.06px;
@@ -288,7 +288,7 @@ p{
     flex-direction: column;
 }
 .learning-title{
-    font-family: "HeadlandOne";
+    font-family: "Inter";
     font-style: normal;
     font-size: 32px;
     font-weight: 400;
@@ -326,7 +326,7 @@ p{
 }
 .learning-item{
     width: calc((100% - 74px) / 3);
-    font-family: "HeadlandOne";
+    font-family: "Inter";
     font-size: 24px;
     font-weight: 400;
     line-height: 24px;
@@ -338,7 +338,7 @@ p{
     background-color: rgba(255,255,255,0.7);
 }
 .ua-translate{
-    font-family: "HeadlandOne";
+    font-family: "Inter";
     font-size: 24px;
     font-weight: 400;
     line-height: 24px;
@@ -349,7 +349,7 @@ p{
     order: 3;
 }
 .av-translate{
-    font-family: "HeadlandOne";
+    font-family: "Inter";
     font-size: 24px;
     font-weight: 400;
     line-height: 24px;
