--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ p{
 .header-background{
     width: 100%;
     background-image: linear-gradient( rgba(43, 74, 97, 0.87), rgba(43, 74, 97, 0.87)),
-    url(../img/header_background.png);
+    url(../img/header_background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 150px;
@@ -145,7 +145,7 @@ p{
 }
 
 .first-background{
-    background-image: url(../img/main_background_1.png);
+    background-image: url(../img/main_background_1.jpg);
     width: 100%;
     height: 740px;
     background-size: cover;
@@ -173,6 +173,7 @@ p{
     background-image: url(../img/arrow.svg);
     width: 152px;
     height: 40px;
+    margin-left: 53px;
     display: block;
 }
 .ua-lang{
@@ -185,9 +186,11 @@ p{
 }
 .av-item{
     height: 136px;
+    width: 265px;
 }
 .ua-item{
     height: 123px;
+    width: 376px;
 }
 .main-button{
     border: 3px solid var(--button-text-color);
@@ -247,7 +250,7 @@ p{
 }
 
 .trailer-item{
-    background-image: url(../img/main_background_2.png);
+    background-image: url(../img/main_background_2.jpg);
     width: 100%;
     height: 741px;
     background-size: cover;
@@ -275,7 +278,7 @@ p{
 }
 
 .learning{
-    background-image: url(../img/main_background_3.png);
+    background-image: url(../img/main_background_3.jpg);
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -360,7 +363,7 @@ p{
     width: 100%;
     height: 223px;
     background-image: linear-gradient( rgba(43, 74, 97, 0.87), rgba(43, 74, 97, 0.87)),
-    url(../img/header_background.png);
+    url(../img/header_background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 45%;
